# LearningOpenGL

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  temp_log.txt  test.txt
.cache/clangd/index/: EBO.cpp.25B5867D2CEAA257.idx  EBO.h.BC2783F58BF8E9C0.idx  InitializeOpenGL.cpp.09AC32CF4B9E8C34.idx  InitializeOpenGL.h.018532EFFE637B7A.idx  InitializeOpenGl.h.E69C42E94A0753AA.idx  PolygonInputFileParser.cpp.3142D9F0CD86C49D.idx  PolygonInputFileParser.h.7AAFECE3F6E4B94A.idx  VAO.cpp.6A19D665DD1E6EFB.idx  VAO.h.D8F537E641E99B46.idx  VBO.cpp.400236AFEE82A895.idx  VBO.h.8FA9C4CD56DAC60F.idx  Vector2D.cpp.4E0939CAB4BE1E8E.idx  Vector2D.h.84CA6BD5130665FD.idx  Vector3D.cpp.9A511943476B1169.idx  Vector3D.h.81105DA92759C08E.idx  camera.cpp.DC433E417F52BD76.idx  camera.h.0A1F8ADBB0A9F03C.idx  main.cpp.1C359F4A852D9BBD.idx  matrix.cpp.449333EAB490FE3C.idx  matrix.h.4F9AF8E820506846.idx  matrix_transformations.cpp.C09BD55A2C696D40.idx  matrix_transformations.h.FDED2FFBB4E7858B.idx  vector.cpp.94FDE756FE871290.idx  vector.h.265A448755E00971.idx
.github/workflows/: ci.yaml  ensure_builds.yaml
Shapes/: Hex.shp  Pent.shp  Square.shp
src/: main.cpp
src/3DObjects/: CMakeLists.txt  camera.cpp  camera.h
src/GLObjects/: CMakeLists.txt  EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/InitHelp/: CMakeLists.txt  InitializeOpenGL.cpp  InitializeOpenGL.h  PolygonInputFileParser.cpp  PolygonInputFileParser.h
src/LML/: CMakeLists.txt  lml.cppm  matrix.cpp  matrix.h  matrix_transformations.cpp  matrix_transformations.h  vector.cpp  vector.h
src/Shaders/: test_fs.glsl  test_vs.glsl
src/VectorMathAndObjects/: CMakeLists.txt  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
